--- a/src/project/APP/app.scss
+++ b/src/project/APP/app.scss
@@ -1,6 +1,6 @@
 @import url(/src/css/base/reset.css);
 
-@import url(/src/css/base/font/pretendard.css);
+@import url(/src/css/base/font.css);
 
 @font-face {
     font-family: 'Arial Rounded MT Bold Bold';
