--- a/src/project/app.css
+++ b/src/project/app.css
@@ -1,5 +1,5 @@
 @import url(/src/css/base/reset.css);
-@import url(/src/css/base/font/pretendard.css);
+@import url(/src/css/base/font.css);
 @font-face {
   font-family: "Arial Rounded MT Bold Bold";
   src: url(/src/css/base/font/ARIALROUNDEDMT.woff);
