--- a/src/work/Chilsung/index.css
+++ b/src/work/Chilsung/index.css
@@ -1,4 +1,4 @@
-@import url(/reset.css);
+@import url(/src/css/base/reset.css);
 @font-face {
   font-family: NotoSans-Bold;
   src: url(./font/NotoSans-Bold.woff);
