--- a/src/work/woodam/index.css
+++ b/src/work/woodam/index.css
@@ -1,4 +1,4 @@
-@import url(./src/css/base/reset.css);
+@import url(/src/css/base/reset.css);
 @font-face {
   font-family: notokr-medium;
   src: url(./font/notokr-medium.woff);
